Fixes grey text colour contrast ratio

--- a/scss/_author.scss
+++ b/scss/_author.scss
@@ -17,7 +17,7 @@
   }
 
   .talk_date {
-      color: grey;
+      color: colours.$grey;
       font-size: 13px;
       font-family: $font-family;
   }
