--- a/scss/_blog-main.scss
+++ b/scss/_blog-main.scss
@@ -1,8 +1,5 @@
 @use 'colours';
 
-$light-grey: #f9f9fb;
-$font-grey: #b6b6b6;
-
 $max-width: 1400px;
 
 $baseFontSize: 16px;
