--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -1,5 +1,6 @@
 $white: #fff;
 $black: #252525;
+$grey: #767676;
 /* TEAL */
 $teal: #2bb3bb;
 $light-teal: #dff4f5;
