--- a/scss/_post-summary.scss
+++ b/scss/_post-summary.scss
@@ -29,7 +29,7 @@
 .post-summary {
 
   .category {
-    color: $font-grey;
+    color: colours.$grey;
   }
 
   .title {
